fixing flask docker file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ ENV STATIC_URL /static
 ENV STATIC_PATH /var/www/app/static
 # COPY ./requirements.txt /var/www/requirements.txt
 RUN pip install Flask
+RUN pip install Flask_cors
 
 WORKDIR /home/pizza
 
@@ -11,4 +12,6 @@ COPY backend/app.py .
 COPY backend/pizza.py .
 COPY backend/tweetBuilder.py .
 
-# CMD ["python", "app.py" ]
+ENTRYPOINT [ "python" ]
+
+CMD [ "app.py" ]
