--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
             dockerfile: frontend/Dockerfile
         ports:
             - "5000:80"
+        volumes:
+            - ./frontend:/usr/share/nginx/html
     backend:
         image: feed-me-pizza-backend
         build:
@@ -13,3 +15,14 @@ services:
             dockerfile: backend/Dockerfile
         ports:
             - "5001:5000"
+    database:
+        image: mysql
+        volumes:
+            - ./db_data:/var/lib/mysql
+        restart: always
+        environment: 
+            MYSQL_ROOT_PASSWORD: somewordpress
+            MYSQL_DATABASE: wordpress
+            MYSQL_USER: wordpress
+            MYSQL_PASSWORD: wordpress
+        
